updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a professional data marketer, music producer, clothing designer and entrepreneur.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was borned in Venezuela then raised in Miami, FL. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Audio visual (AV) design, traveling and entrepreneurship. I truly enjoy exploring and experiencing new things.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>An innovative mixture of AI, Art, and Marketing that fills a void in consumers lives.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Marina Del Rey</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would like to expand my personal toolkit. Learning web development will also allow me to create product prototypes for my employer and personal business ventures.</p>
     </section>
 
     <footer id="footer">
