updating our details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Audio visual (AV) design, traveling and entrepreneurship. I truly enjoy exploring and experiencing new things.</p>
       <h1>What's your dream job?</h1>
-      <p>An innovative mixture of AI, Art, and Marketing that fills a void in consumers lives.</p>
+      <p>An innovative mixture of AI, entertainment, and marketing that fills a void in consumers lives.</p>
       <h1>Where do you live?</h1>
       <p>Marina Del Rey</p>
       <h1>Why do you want to be a web developer?</h1>
